Fix dark mode for Firefox.

--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -1,9 +1,10 @@
-html {
-    background-color: #ebebeb !important;
+body {
+    background-color: #141414 !important;
+    margin: 0;
 }
-
-html {
-filter: invert(100%) hue-rotate(180deg);
+    
+body {
+    filter: invert(100%) hue-rotate(180deg);
 }
 
 img:not(.icon-text, .icon-social),
